# R-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/ASTNode/: ASTNode.hpp  Crate.hpp  ExprArrayIndex.hpp  ExprBlock.hpp  ExprCall.hpp  ExprField.hpp  ExprGrouped.hpp  ExprIf.hpp  ExprLiteral.hpp  ExprLoop.hpp  ExprMethodCall.hpp  ExprNode.hpp  ExprOperator.hpp  ExprPath.hpp  ExprReturn.hpp  ExprStruct.hpp  ExprUnderscore.hpp  ItemConst.hpp  ItemEnum.hpp  ItemFn.hpp  ItemImpl.hpp  ItemNode.hpp  ItemStruct.hpp  ItemTrait.hpp  Path.hpp  PatternIdentifier.hpp  PatternLiteral.hpp  PatternNode.hpp  PatternPath.hpp  PatternReference.hpp  PatternWildcard.hpp  StmtEmpty.hpp  StmtExpr.hpp  StmtItem.hpp  StmtLet.hpp  StmtNode.hpp  TypeArray.hpp  TypeNode.hpp  TypePath.hpp  TypeReference.hpp  (+1 more)
include/ASTVisitor/: ASTVisitor.hpp
include/CodeGen/: CodeGen.hpp
include/Lexer/: lexer.hpp  token.hpp
include/Parser/: ASTNode.hpp  ASTVisitor.hpp  Crate.hpp  ExprArrayIndex.hpp  ExprBlock.hpp  ExprCall.hpp  ExprGrouped.hpp  ExprLiteral.hpp  ExprLoop.hpp  ExprMethodCall.hpp  ExprOperator.hpp  ExprPath.hpp  ExprReturn.hpp  ExprStruct.hpp  ItemConst.hpp  ItemEnum.hpp  ItemFn.hpp  ItemImpl.hpp  ItemNode.hpp  ItemTrait.hpp  Path.hpp  PatternIdentifier.hpp  PatternLiteral.hpp  PatternReference.hpp  PatternWildcard.hpp  StmtItem.hpp  StmtNode.hpp  TypeNode.hpp  TypeReference.hpp  TypeUnit.hpp  parser.hpp
include/Semantic/: ConstSolver.hpp  SymTable.hpp  SymbolChecker.hpp  SymbolCollector.hpp  Type.hpp
src/CodeGen/: CodeGen.cpp
test/: builtin.c  test
(+9 files in other folders)
